# Python-RVO2

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
src/: rvo2.pyx
